# complements_bot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
src/: main.py  settings.py
src/bot/: bot.py  middelwares.py
src/database/: complements.json  database.json
src/domains/complements/: abstractions.py  model.py
src/domains/games/: __init__.py  abstractions.py  collection.py  cross_and_zeroes.py  guess_the_number.py  handler.py  model.py
src/handlers/: message.py
src/repository/: abstractions.py  complements.py  json_repo.py  sqlite_repo.py
